--- a/style.css
+++ b/style.css
@@ -50,3 +50,15 @@ span.item-count {
     color: black;
     font-size: 24px;
 }
+
+.no-order {
+	border: 5px solid #212121;
+    padding: 10px;
+    width: 900px;
+    margin: 0 auto;
+    text-transform: capitalize;
+}
+
+.date {
+	width: 12%;
+}
